[package]
name = "faced-rs"
version = "0.1.0"
authors = ["drbh <david.richard.holtz@gmail.com>"]
edition = "2018"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.14.0"
image = "0.22.3"
ndarray = "0.13.0"